manifest-k8s/backend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: gke-workload-identity
      containers:
      - name: backend
        image: susanssky/cyf-hotel-backend:latest
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 4000
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 10
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 4000
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 10
        # resources:
        #   requests:
        #     memory: 200Mi
        #     cpu: 200m
        #   limits:
        #     memory: 300Mi
        #     cpu: 300m
        ports:
        - containerPort: 4000
