manifest-k8s/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: default
spec:
  selector:
    app: backend
  ports:
  - port: 4000
    protocol: TCP
  type: ClusterIP
