manifest-k8s/database-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: default
spec:
  selector:
    app: postgres
  ports:
    - name: db
      protocol: TCP
      port: 5432
  type: ClusterIP
