manifest-k8s/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: default
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: frontend
  ports:
  - port: 3000
    protocol: TCP
  type: ClusterIP
